--- a/src/main/resources/static/pages/guest/reservePage/reserve2Page.html
+++ b/src/main/resources/static/pages/guest/reservePage/reserve2Page.html
@@ -8,7 +8,7 @@
                 <li class="active"><a href="#/guest/restaurants-page"><span class="glyphicon glyphicon-home"></span>Restorani</a></li>
                 <li class="active"><a href="#/guest/friends-page"><span class="glyphicon glyphicon-list-alt"></span>Prijatelji</a></li>
                 <li class="active"><a href="#/guest/profile-page"><span class="glyphicon glyphicon-list-alt"></span>Moj nalog</a></li>
-                <li class="active"><a href="#/guest/myReservations-page"><span class="glyphicon glyphicon-list-alt"></span>Moj rezrvacijee</a></li>
+                <li class="active"><a href="#/guest/myReservations-page"><span class="glyphicon glyphicon-list-alt"></span>Moj rezervacije</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <button ng-click="logoff()"> Log out </button>
@@ -18,7 +18,7 @@
     </nav>
     <div>
 
-            <button class="btn btn-info" ng-click="reserve(reserve2Page.restaurantId)">
+        <button class="btn btn-info" ng-click="reserve(reserve2Page.restaurantId)">
                     Dalje >>
             </button>
         <div>
