--- a/src/main/resources/static/pages/manager/menu.html
+++ b/src/main/resources/static/pages/manager/menu.html
@@ -51,11 +51,11 @@
 						</div>
 						<div class="form-group">
 							<label for="newItemImageLink">Link slike</label>
-							<input type="text" ng-model="menuItem.image_link" required id="newItemImageLink" class="form-control" placeholder="Link ka slici na Internetu" required>
+							<input type="text" ng-model="menuItem.image_link" id="newItemImageLink" class="form-control" placeholder="Link ka slici na Internetu">
 						</div>
 						<div class="form-group">
 							<label for="newItemType">Tip stavke</label>
-							<select class="form-control" id="newItemType" ng-model="menuItem.itemTypeId">
+							<select class="form-control" id="newItemType" required ng-model="menuItem.itemTypeId">
 								<option ng-repeat="itemType in itemTypes" value="{{itemType.id}}">{{itemType.display_name}}</option>
 							</select>
 						</div>
@@ -63,8 +63,8 @@
 					</form>
 			      </div>
 			      <div class="modal-footer">
-				        <button type="button" class="btn btn-default" data-dismiss="modal">Odustani</button>
-				        <button type="button" class="btn btn-success" ng-click="addMenuItem()">Dodaj novu stavku menija</button>
+				        <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="closeModal()">Odustani</button>
+				        <button type="button" class="btn btn-success" ng-disabled="newItemForm.$invalid" ng-click="addMenuItem()">Dodaj novu stavku menija</button>
 			      </div>
 		    </div>
 	  </div>
