--- a/src/main/resources/static/pages/sysmanager/profile.html
+++ b/src/main/resources/static/pages/sysmanager/profile.html
@@ -15,8 +15,8 @@
     </div>
 </div>
 -->
-
-<div>
+<div class="col-md-1 col-lg-1 columns form"></div>
+<div class="col-md-10 col-lg-10 columns form">
 	<div ng-controller="sysmanagerProfileController">
 	
 	<uib-tabset justified="true" class="tabs">
@@ -40,7 +40,7 @@
 				<ui-view></ui-view>
 			</div>
 		</uib-tab>
-		<button type="button" class="btn btn-warning pull-right" ng-click="logout()">Odjavi me</button>
+		<button type="button" class="btn btn-warning btn-lg pull-right" ng-click="logout()">Odjavi me</button>
 	</uib-tabset>
 	
 	</div>
