--- a/src/main/resources/static/pages/bidder/newBidding.html
+++ b/src/main/resources/static/pages/bidder/newBidding.html
@@ -1,6 +1,7 @@
 <div class="container-fluid">
-	<h3 id="newBiddingTitle">Unos ponude</h3>
+	<h3 class="text-center" id="newBiddingTitle">Unos ponude</h3>
 	<div class="row">
+		<div class="col-md-3 col-lg-3 form"></div>
 		<div class="col-md-6 col-lg-6 form">
 			
 				<div class="thumbnail">
@@ -50,7 +51,7 @@
 								<label for="ukupnaCena">Ukupna cena</label>
 								<input type="number" required ng-model="bidding.price" disabled id="ukupnaCena" class="form-control">
 							</div>
-							<button type="button" class="btn btn-success btn-block" ng-click="addNewGroceries()">Kreiraj ponudu</button>
+							<button type="button" class="btn btn-success btn-block" ng-disabled="!bidding.price" ng-click="addNewGroceries()">Kreiraj ponudu</button>
 						</form>
 					</div>
 		</div>
@@ -105,7 +106,7 @@
 			      </div>
 			      <div class="modal-footer">
 				        <button type="button" class="btn btn-default" data-dismiss="modal">Zatvori</button>
-				        <button type="button" class="btn btn-success" data-dismiss="modal" ng-click="addBiddingItem()">Postavi stavku</button>
+				        <button type="button" class="btn btn-success" data-dismiss="modal" ng-disabled="addItemForm.$invalid" ng-click="addBiddingItem()">Postavi stavku</button>
 			      </div>
 		    </div>
 	  </div>
