--- a/src/main/resources/static/pages/bidder/overviewBidding.html
+++ b/src/main/resources/static/pages/bidder/overviewBidding.html
@@ -1,11 +1,16 @@
 <div class="container-fluid">
 	<div class="row">
+		<div class="col-md-3 col-lg-3 form"></div>
 		<div class="col-md-6 col-lg-6 form">
 			<form novalidate name="displayMyBiddingsForm">
 				<h4 class="text-center">Pregled poslatih ponuda</h4>
 				<div class="form-group">
 					<label for="filterByStatus">Filtriraj po statusu</label>
 					<select class="form-control" ng-model="currentStatus" ng-options="s for s in biddingStatus" id="filterByStatus"></select>
+				</div>
+				
+				<div ng-if="biddings.length==0">
+					<h4 class="text-center">Još uvek nema poslatih ponuda</h4>
 				</div>
 				
 				<div ng-repeat="b in biddings">
