--- a/src/main/resources/static/pages/manager/home.html
+++ b/src/main/resources/static/pages/manager/home.html
@@ -2,9 +2,10 @@
 
 <div class="row">
 
+<div class="col-md-2 col-lg-2"></div>
 <div class="col-md-8 col-lg-8 columns form">
 
-    <form novalidate name="registerForm">
+    <form name="registerForm">
         
         <h4 class="text-center">Izmeni podatke</h4>
         
@@ -32,7 +33,7 @@
             <input type="text" required ng-model="user.phoneNumber" id="inputManagerPhone" class="form-control">     
       	</div>
         -->
-        <p><a type="submit" class="btn btn-success btn-block" ng-click="modifyManager()">Sačuvaj</a></p>
+        <p><a type="submit" class="btn btn-success btn-block" ng-disabled="registerForm.$invalid" ng-click="modifyManager()">Sačuvaj</a></p>
         <p><a type="submit" class="btn btn-danger btn-block" ng-click="cancel()">Odustani</a></p>
         <p><a type="submit" class="btn btn-primary btn-block" data-toggle="modal" data-target="#myModalPassword">Promeni Lozinku</a></p>
     </form>
@@ -52,20 +53,20 @@
         <h4 class="modal-title" id="myModalLabel">Promena lozinke</h4>
       </div>
       <div class="modal-body">
-      	<form>
+      	<form name="changePasswordFormManager">
           <div class="form-group">
             <label for="pswd" class="control-label">Trenutna lozinka</label>
-            <input type="password" class="form-control" ng-model="user.oldPassword" id="pswd">
+            <input type="password" required class="form-control" ng-model="user.oldPassword" id="pswd" placeholder="**************">
           </div>
           <div class="npswd">
             <label for="message-text" class="control-label">Nova lozinka</label>
-            <input type="password" class="form-control" ng-model="user.newPassword" id="npswd" placeholder="**************">
+            <input type="password" required class="form-control" ng-model="user.newPassword" id="npswd" placeholder="**************">
           </div>
         </form>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Zatvori</button>
-        <button type="button" class="btn btn-primary" ng-click="changePassword()">Potvrdi</button>
+        <button type="button" class="btn btn-primary" ng-disabled="changePasswordFormManager.$invalid" ng-click="changePassword()">Potvrdi</button>
       </div>
     </div>
   </div>
