--- a/src/main/resources/static/pages/manager/workers.html
+++ b/src/main/resources/static/pages/manager/workers.html
@@ -1,6 +1,7 @@
 <div class="container-fluid">
 
 <div class="row">
+	<div class="col-md-2 col-lg-2 form"></div>
 	<div class="col-md-8 col-lg-8 form">
 	
 		<form novalidate name="workersListForm">
